--- a/recherches-graphiques/style.css
+++ b/recherches-graphiques/style.css
@@ -2,36 +2,156 @@
 /* @import "normalize.css" ou reset */
 @import "../css/reset.css";
 
-#header {
+
+
+#connexion{
+	background: #16a8d7; /* Old browsers */
+	font-family: arial;
+}
+
+#header,
+#connexion_container {
 	width:100%;
 	max-width: 980px;
-	height: 125px;
-	border:1px solid black;
+	padding: 25px 0;
 	margin: auto;
 	overflow: hidden;
 }
 
+#header{
+
+}
+
 #header #logo{
-	background-image: url(../img/logo.png);
+	background-image: url(../img/logo_bw.png);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	margin-top: 10px;
-	width: 175px;
-	height: 105px;
-	float: left;
+	width: 250px;
+	height: 150px;
+	margin: auto;
 }
 
 
-#header a{
-	padding: 3px 5px;
-	background-color: #5599FF;
-	color: #fff;
-	font-family: verdana;
+#connexion_container div{
+	width: 40%;
+	background-color: rgba(0, 0, 0, 0.1);
+	padding: 5px;
+	border-radius: 10px;
+	overflow: hidden;
+}
+
+#signup{
+	float: left;
+	margin-left: 25px;
+}
+
+#signin{
+	float: right;
+	margin-right: 25px;
+}
+
+#connexion_container div form{
+	background-color: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 0 3px #555;
+}
+
+#connexion_container div form header{
+	padding: 15px 20px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #999;
+
+	background: #f2f2f2; /* Old browsers */
+	background: -moz-linear-gradient(top,  #f2f2f2 0%, #e2e2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2f2f2), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #f2f2f2 0%,#e2e2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
+
+}
+
+#connexion_container div form header p{
+	font-family: arial;
 	font-size: 15px;
+	font-weight: 700;
+	text-align: center;
+	text-transform: uppercase;
+	color: #555;
+}
+
+#connexion_container div form input[type="text"],
+#connexion_container div form input[type="email"],
+#connexion_container div form input[type="password"]{
+	text-align: center;
+	font-size: 13px;
+	color: #555;
+	width: 80%;
+	display: block;
+	margin: auto;
+	border-radius: 5px;
+	margin-bottom: 15px;
+	padding: 8px 0;
+	border: 1px solid #ddd;
+}
+
+#connexion_container div form input[type="submit"]{
+	text-align: center;
+	font-size: 17px;
+	font-weight: 700;
+	color: #555;
+	width: 50%;
+	display: block;
+	margin: auto;
+	border-radius: 5px;
+	margin-bottom: 15px;
+	padding: 8px 0;
+	border: 1px solid #ddd;
+
+	box-shadow: inset -1px -1px 1px #555;
+
+	background: #f2f2f2; /* Old browsers */
+	background: -moz-linear-gradient(top,  #f2f2f2 0%, #e2e2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2f2f2), color-stop(100%,#e2e2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #f2f2f2 0%,#e2e2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #f2f2f2 0%,#e2e2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#e2e2e2',GradientType=0 ); /* IE6-9 */
+
+
+}
+
+
+#connexion_container div form input[type="submit"]:hover{
+	box-shadow: inset 1px 1px 1px #555;
+
+	background: #e2e2e2; /* Old browsers */
+	background: -moz-linear-gradient(top,  #e2e2e2 0%, #f2f2f2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e2e2e2), color-stop(100%,#f2f2f2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #e2e2e2 0%,#f2f2f2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #e2e2e2 0%,#f2f2f2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #e2e2e2 0%,#f2f2f2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #e2e2e2 0%,#f2f2f2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
+}
+
+#connexion_container div #forget{
+	text-align: center;
+	margin-top: 10px;
+	color: #fff;
+	font-size: 13px;
+}
+
+#connexion_container div #forget .forget_click{
+	color: #555;
+	font-size: 13px;
 	text-decoration: none;
 }
 
-#header a:hover{
-	background-color: #3355BB;
+#connexion_container div #forget .forget_click:hover{
 	text-decoration: underline;
 }
+
