--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,255 @@ input[type="submit"]{
 	cursor: pointer;
 }
 
-#header,
 #formulaire_container {
 	width:100%;
 	max-width: 980px;
-	padding: 25px 0;
 	margin: auto;
 	overflow: hidden;
 }
+
+/***************************************************
+********************** HEADER  *********************
+***************************************************/
+
+#header
+{
+	width:100%;
+	max-width: 980px;
+	padding: 10px 0 5px;
+	margin: auto;
+	overflow: hidden;
+	height: 130px;
+}
+
+#header{
+/*	border: 1px solid black;*/
+	margin-bottom: 35px;
+}
+
+#header #logo{
+	background-image: url(../img/logo.png);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	width: 150px;
+	height: 90px;
+	float: left;
+}
+
+#header .connexion {
+	clear: right;
+	float: right;
+	text-align: center;
+	position: relative;
+	top: 30px;
+	margin-bottom: 10px;
+	width: 80px;
+	padding:  4px 0;
+	background-color: #16a8d7;
+	border: 1px solid #16a8d7;
+	border-radius: 3px;
+	color: #fff;
+	text-decoration: none;
+	overflow: hidden;
+}
+
+#header .connexion:hover {
+	background-color: #fff;
+	color: #16a8d7;
+	border: 1px solid #16a8d7;
+}
+
+#header .connexion:before {
+	content: "{ ";
+	position: relative;
+	left: -25px;
+	top: -1px;
+    transition: all 0.5s ease-in; 
+
+}
+
+#header .connexion:after {
+	content: " }";
+	position: relative;
+	right: -25px;
+	top: -1px;
+    transition: all 0.5s ease-in; 
+
+}
+
+#header .connexion:hover:before {
+	content: "{ ";
+	position: relative;
+	left: 0px;
+
+}
+
+#header .connexion:hover:after {
+	content: " }";
+	position: relative;
+	right: 0px;
+
+}
+
+#header #search{
+	clear: right;
+	margin: auto;
+	width: 30%;
+	position: relative;
+	top: -35px;
+	left: 30px;
+}
+
+#header form{
+	text-align: center;
+}
+
+#searchbar{
+	width: 100%;
+	margin: auto;
+
+}
+
+#header form input[type="text"]{
+	text-align: center;
+	height: 25px;
+	opacity: .5;
+	width: 30%;
+	padding:  4px 0;
+	border: none;
+	font-size: 15px;
+	color: #16a8d7;
+    transition: all 0.5s ease-in; 
+}
+
+#header form input[type="text"]:focus,
+#header form input[type="text"]:hover{
+	outline:  none;
+	width: 75%;
+	opacity: 1;
+}
+
+#header #searchbar:before,
+#header #searchbar:after{
+	color: #16a8d7;
+	font-size: 35px;
+	position: relative;
+	top:5px;
+}
+
+#header #searchbar:before{
+	content: "{";
+}
+
+#header #searchbar:after{
+	content: "}";
+}
+
+#search_submit{
+	display: none;
+}
+
+#searchbar #recherche:hover + #search_submit,
+#searchbar #recherche:focus + #search_submit{
+	width: 30px;
+	height: 30px;
+	display: inline-block;
+}
+
+#searchbar #recherche:hover + #search_submit #search_btn,
+#searchbar #recherche:focus + #search_submit #search_btn{
+	opacity: 1;
+	width: 30px;
+	height: 30px;
+	background-color: transparent;
+	border: none;
+	background-image: url(../img/avatar_200.png);
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	cursor: pointer;
+	outline:  none;
+	position: relative;
+	top: 8px;
+}
+
+
+
+
+
+
+/***************************************************
+********************** NAV  ************************
+***************************************************/
+
+
+#nav{
+	width: 100%;
+	max-width: 980px;
+	margin: auto;
+	margin-bottom: 40px;
+	text-align: center;
+	height: 25px;
+
+}
+
+#nav a {  
+	padding: 5px 10px;
+	margin-right: 10px;
+
+	text-decoration: none;
+	color: #fff;
+	font-weight: 700;
+	font-size: 18px;
+	text-transform: uppercase;
+    border: 1px solid #16a8d7;
+
+	position: relative;  
+    top: 0;  
+    background-color: #16a8d7;
+    border-radius: 3px;
+    transition: all 0.3s ease-in;  
+} 
+
+#nav .active{  
+	color: #16a8d7;
+    background-color: #fff;
+    border: 1px solid #16a8d7;
+    top: -10px;  
+
+}
+
+
+#nav a:before {  
+    content: ' ';  
+    position: absolute;  
+    bottom: -1px; left: 0;  
+    width: 100%;  
+    height: 6px;  
+    background: #555;  
+    box-shadow: 0 0 3px #555,0 0 3px #555,0 0 3px #555;  
+    border-radius: 90px/20px;  
+    z-index: -1;  
+    transition: all 0.3s ease-in;  
+}  
+
+
+#nav a:hover,  
+#nav a:focus {  
+    top: -10px;  
+} 
+
+
+#nav a:hover:before,  
+#nav a:focus:before,
+#nav .active:before {  
+    bottom: -11px;  
+    left: -3px;  
+    width: 106%;  
+    height: 3px;  
+    background: #e5e5e5;  
+    box-shadow: 0 0 9px #e5e5e5,0 0 9px #e5e5e5,0 0 9px #e5e5e5,0 0 9px #e5e5e5,0 0 9px #e5e5e5;  
+} 
+
 
 #header #logo{
 	background-image: url(../img/logo_bw.png);
@@ -40,13 +281,13 @@ input[type="submit"]{
 	overflow: hidden;
 }
 
-#formulaire_container #avatar{
+#profilEdit #avatar{
 	width: 80%;
 	background-color: #FFF;
 	margin: auto;
 	overflow: hidden;
 }
-#formulaire_container #avatar #pics{
+#profilEdit #avatar #pics{
 	width: 100px;
 	height: 100px;
 	background-color: #FFF;
@@ -61,7 +302,7 @@ input[type="submit"]{
 	margin-bottom: 15px;
 }
 
-#formulaire_container #avatar input{
+#profilEdit #avatar input{
 	margin: 0 auto 20px;
 	}
 
@@ -125,6 +366,7 @@ input[type="submit"]{
 #formulaire_container div form input[type="text"],
 #formulaire_container div form input[type="email"],
 #formulaire_container div form input[type="password"],
+#formulaire_container div form textarea,
 #formulaire_container div form select{
 	text-align: center;
 	font-size: 13px;
@@ -136,6 +378,12 @@ input[type="submit"]{
 	margin-bottom: 15px;
 	padding: 8px 0;
 	border: 1px solid #ddd;
+	resize: none;
+}
+
+#formulaire_container div form textarea
+{
+	height: 6em;
 }
 #formulaire_container div form select{
 	padding-left: 33%;
@@ -242,7 +490,7 @@ input[type="submit"]{
 	border-right-width: 0;
 	box-shadow: 0 0 0px #444;
 	float: left;
-	height: 33px;
+	height: 15px;
 }
 
 #formulaire_container #remember form input[type="submit"]{
@@ -259,6 +507,12 @@ input[type="submit"]{
 	position: relative;
 	left: -3px;
 	overflow: hidden;
+}
+
+#formulaire_container #remember form input[type="submit"]{
+/* 	display: block;
+height: 33px;
+width: 50%; */
 	background-image: url(../img/picto.png);
 	background-repeat: no-repeat;
 	background-size: 45% ;
@@ -266,14 +520,84 @@ input[type="submit"]{
 }
 
 
+/***************************************************
+********************* SECTION ***********************
+***************************************************/
 
+#mainHome
+{
+	
+	float: left;
+	width: 75%;
+	height: 100%;
+}
+
+
+
+body #mainPro
+{
+	width: 100%;
+	max-width: 980px;
+	margin: auto;
+	overflow: hidden;
+}
+
+#navPro
+{
+	float: right;
+
+}
+#navPro a
+{
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #FFF;
+	font: 700 1em arial;
+}
+
+#navPro .dash,
+#navPro .edit,
+#navPro .view
+{
+	width: 120px;
+	height: 30px;
+	background-color: #16a8d7;
+	border-radius: 10px 10px 0 0;
+	display: inline-block;
+	text-align: center;
+	line-height: 2;
+}
+
+
+/***************************************************
+********************* ASIDE ***********************
+***************************************************/
+
+aside
+{
+	float: right;
+	width: 300px;
+	background-color: #DFDFDF;
+	height: 100%;
+	color: #000;
+}
+
+aside #joinUs,
+aside #eventActus
+{
+	padding: 15px 0 15px ;
+	text-align: center;
+	font-weight: 700;
+
+}
 
 /***************************************************
 ********************* FOOTER ***********************
 ***************************************************/
-
+/*
 footer{
 	width:100%;
+	height: 100px;
 	max-width: 980px;
 	padding: 25px 0;
 	margin: auto;
@@ -285,11 +609,62 @@ footer div {
 	width: 200px;
 	text-align: center;
 	color: #fff;
-	font-size: 12px;
-	text-shadow: 0 0 2px #333;
 	left: 50%;
 	margin-left: -100px;
 	position: absolute;
 	bottom: 15px;
 }
+*/
+
+footer {
+	width: 100%;
+	height: 30px;
+	background-color: #16a8d7;
+}
+
+
+footer #foot
+{
+	font-size: 12px;
+	cursor: pointer;
+	margin: 10px 15%;
+}
+
+footer a
+{
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #FFF;
+	padding-right: 20px;
+	font-weight: bold;
+}
+
+footer a:hover
+{
+	text-decoration: none;
+	color: #000;
+	padding-right: 20px;
+}
+
+footer #mentions
+{
+	float: left;
+	width: 50%;
+	text-align: right;
+
+}
+
+footer #copy
+{
+	float: right;
+	width: 50%;
+	text-align: right;
+	text-transform: none;
+	color: #FFF;
+	font-weight: bold;
+}
+
+
+
+
 
