--- a/css/profil_style.css
+++ b/css/profil_style.css
@@ -185,6 +185,67 @@
 	overflow: hidden;
 }
 
+
+#main_container input,
+#main_container textarea{
+	border: none;
+	background-color: transparent;
+	padding: 0;
+	width: 115%;
+	margin: 0;
+	color: #16a8d7;
+	background-color: #FFF;
+	font-family: verdana;
+}
+
+/*#main_container input[type="file"]
+{
+	opacity: 0;
+	width: 100%
+}*/
+
+#main_container .pseudo_in
+{
+	font-size: 18px;
+	font-weight: 700;
+	text-transform: uppercase;
+	width: 90%;
+}
+
+#main_container input
+{
+	padding-left: 5px;
+}
+
+#main_container textarea{
+	resize:none;
+	width: 104%;
+	height: 166px;
+	padding: 3px;
+	margin: -15px -10px;
+}
+
+#main_container textarea::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+#main_container textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+
+#main_container textarea::-webkit-scrollbar-thumb {
+  background-color: #16a8d7;
+  outline: 1px solid #FFF;
+}
+
+#main_container .link_in
+{
+	color: #16a8d7;
+	width: 100%;
+	font: 400 1em arial;
+}
+
 #main_container .container #fiche{
 	box-sizing: border-box;
 	width: 100%;
@@ -212,7 +273,7 @@
 
 
 #profil_info,
-#profil_img{
+#profil_img{info
 	height: 200px;
 	overflow: hidden;
 	position: relative;
@@ -313,7 +374,7 @@
 }
 
 #main_container .container #profil_img .urls{
-	margin-top: 30px;
+	margin-top: 20px;
 	clear: both;
 	text-transform: inherit;
 	font-weight: 400;
