--- a/css/profil_style.css
+++ b/css/profil_style.css
@@ -198,11 +198,29 @@
 	font-family: verdana;
 }
 
-/*#main_container input[type="file"]
+#main_container input[type="file"]
 {
-	opacity: 0;
-	width: 100%
-}*/
+	width: 80%;
+	padding-left: 0;
+	background-color: #16a8d7;
+}
+
+#main_container  #fiche .left #avatar {
+	float: left;
+	margin-top: -95px;
+	padding-bottom: 7px;
+	width: 95px;
+	height: 110px;
+}
+
+
+#main_container  #fiche .left #pseudo_profil,
+#main_container  #fiche .left #score,
+#main_container  #fiche .left #work,
+#main_container  #fiche .left #locate {
+	float: left;
+	margin-left: 105px;
+}
 
 #main_container .pseudo_in
 {
@@ -212,13 +230,14 @@
 	width: 90%;
 }
 
+
 #main_container input
 {
 	padding-left: 5px;
 }
 
 #main_container textarea{
-	resize:none;
+	resize: none;
 	width: 104%;
 	height: 166px;
 	padding: 3px;
@@ -259,6 +278,7 @@
 
 #main_container .container #fiche .left{
 	margin-bottom: 0px;
+	float: left;
 }
 
 #main_container .container .left{
@@ -269,6 +289,42 @@
 
 #main_container .container .left:nth-child(2n){
 	float: right;
+}
+
+#main_container .container #fiche .right{
+	margin-bottom: 0px;
+}
+
+#main_container .container .right{
+	width: 47%;
+	float: left;
+	margin-bottom: 25px;
+}
+
+#main_container .container .right:nth-child(2n){
+	float: right;
+}
+
+#main_container .container .right .password{
+	text-transform: inherit;
+	font-weight: 400;
+	font-size: 15px;
+	margin-top: 10px;
+	padding: 2px;
+	width: 60%;
+}
+
+#main_container .container .right .passes {
+	float: right;
+	text-align: right;
+	width: 100%;
+}
+
+#main_container .container .right .passes .pass {
+	color: #FFF;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 15px;
 }
 
 
@@ -314,6 +370,7 @@
 	border: 3px solid #fff;
 	box-shadow: 0 0 10px rgba(0,0,0,0.4);
 	overflow: hidden;
+	margin-bottom: 15px;
 
 }
 
@@ -373,8 +430,14 @@
 	background-size: 20px 20px;
 }
 
+#main_container .container #profil_img .url_links {
+	margin-top: 15px;
+	width: 100%;
+	padding-left: 0;
+}
+
 #main_container .container #profil_img .urls{
-	margin-top: 20px;
+	margin-top: 10px;
 	clear: both;
 	text-transform: inherit;
 	font-weight: 400;
