update guillaume jeudi matin

--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,8 @@ input[type="submit"]{
 /***************************************************
 ********************** NAV  ************************
 ***************************************************/
-#nav_n{
-	display: none;
+.bg_w{
+	background-color: #fff;
 }
 
 #nav{
