update cyril jeudi 1

--- a/css/profil_style.css
+++ b/css/profil_style.css
@@ -186,27 +186,47 @@ header
 }
 
 
-#main_container input[type="submit"]{
+#main_container #subAll[type="submit"]{
 	cursor: pointer;
 	background-color: #16a8d7;
 	border: 1px solid #FFF;
 	color: #FFF;
-	width: 30%;
-	float: right;
+	width: 45%;
+	float: left;
 	padding: 5px 0;
-	margin-top: 15px;
+	margin-left: 15px;
 }
 
-#main_container input[type="submit"]:hover{
+#main_container #subAll[type="submit"]:hover{
 	cursor: pointer;
 	background-color: #FFF;
 	color: #16a8d7;
-	width: 30%;
-	float: right;
+	width: 45%;
+	float: left;
 	padding: 5px 0;
-	margin-top: 15px;
+	margin-left: 15px;
 }
 
+
+#main_container #passs #subPwd[type="submit"]{
+	cursor: pointer;
+	background-color: #16a8d7;
+	color: #FFF;
+	width: 5%;
+	float: right;
+	padding: 19px 0px;
+	margin: -54px -5px;
+}
+
+#main_container #passs #subPwd[type="submit"]:hover{
+	cursor: pointer;
+	background-color: #FFF;
+	color: #16a8d7;
+	width: 5%;
+	float: right;
+	padding: 19px 0px;
+	margin: -54px -5px;
+}
 #main_container input,
 #main_container textarea{
 	border: none;
@@ -234,7 +254,6 @@ header
 
 #main_container  #fiche .left #avatar {
 	float: left;
-	margin-top: -95px;
 	padding-bottom: 7px;
 	width: 95px;
 	height: 110px;
@@ -246,7 +265,7 @@ header
 #main_container  #fiche .left #work,
 #main_container  #fiche .left #locate {
 	float: left;
-	margin-left: 105px;
+	margin-left: 15px;
 }
 
 #main_container .pseudo_in
@@ -332,22 +351,31 @@ header
 	float: right;
 }
 
-#main_container .container .right .password{
+#main_container .container .right #passs {
+	border: 1px dotted #FFF;
+	border-radius: 10px;
+	float: right;
+	margin: 8px;
+	padding: 10px;
+}
+#main_container .container .right #passs .password{
 	text-transform: inherit;
 	font-weight: 400;
 	font-size: 15px;
 	margin-top: 10px;
 	padding: 2px;
-	width: 60%;
+	width: 50%;
 }
 
-#main_container .container .right .passes {
+
+#main_container .container .right #passs .passes {
 	float: right;
+	padding-right: 5px;
 	text-align: right;
 	width: 100%;
 }
 
-#main_container .container .right .passes .pass {
+#main_container .container .right #passs .passes .pass {
 	color: #FFF;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -393,6 +421,7 @@ header
 	float: left;
 	width: 100px;
 	height: 100px;
+	background-color: #FFF;
 	border-radius: 10px;
 	border: 3px solid #fff;
 	box-shadow: 0 0 10px rgba(0,0,0,0.4);
